Front End - Exercise #6

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,42 @@
-.App {
-  text-align: center;
+*{
+  margin:0;
+  padding:0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+header{
+  padding-left: 30px;
+  height:50px;
+  background-color:rgb(133, 9, 9);
+  font-family:'Poppins',sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.App{
+  background-color: rgb(255, 250, 250);
+  height:100vh;
+  width:100%;
+  display: flex;
+  flex-direction: column;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container{
+  height:70%;
+  /* width:100%; */
+  margin: auto;
+  display: grid;
+  grid-template-columns: repeat(3,450px);
+}
+
+img{
+  height:130px;
+  width:130px;
+  border:4px solid rgb(133, 9, 9);
+  border-radius:50%;
+}
+
+.userHolder{
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
